--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ole&display=swap');
 
 body {
-    font-family: "Ole", Helvetica, sans-serif;
+    font-family: "Arial", Helvetica, sans-serif;
     background-color: #ffffff;
     color: #000000;
     margin: 0;
